k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-node-app
  template:
    metadata:
      labels:
        app: demo-node-app
    spec:
      containers:
      - name: demo-node-app
        image: nrampling/demo-node-app:1.0.3
        ports:
        - containerPort: 3000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: demo-node-app-svc
# spec:
#   selector:
#     app: demo-node-app
#   ports:
#     - protocol: TCP
#       port: 3000
#       targetPort: 3000
#   type: NodePort
